--- a/docs/AboutUs.adoc
+++ b/docs/AboutUs.adoc
@@ -51,7 +51,7 @@ Ensures competency with JAVAFX. As for main components, is in charge of storage 
 
 === Pei Junwei
 image::pjunwei.png[width="150", align="left"]
-{empty}[https://github.com/pjunwei95[github]][<<peijunwei#, portfolio>>]
+{empty}[https://github.com/pjunwei95[github]][https://cs2103aug2017-w13-b2.github.io/main/team/peijunwei.html[portfolio]]
 
 Role: Code Quality, Integration and Documentation +
 Responsibilities: Ensure the code quality of the SUT is maintained at all times.
